Project recipe_hub {
  database_type: 'PostgreSQL'
  Note: 'DB structure for holding recipes'
}

Enum unit_type{
  MASS
  VOLUME
  OTHER
}


Table recipes {
  id int [increment]
  name varchar
  created_at timestamp [default: `now()`]
  
  Indexes{
    id [pk]
    name
    created_at
  }
}

Table ingredients {
  id int [increment]
  name varchar(255)
  density real [default: null]
  
  Indexes{
    id [pk] 
    name
  }
}

Table recipe_ingredients as RI {
  recipe_id int [not null, ref: > recipes.id]
  ordinal int [not null, note: 'n-th ingredient in recipe']
  ingredient_id int [not null, ref: > ingredients.id]
  amount real [not null]
  type unit_type [not null]
  notes varchar
  Note: 'Stores ingredient and amount pairs for a recipe'
  
  Indexes {
    (recipe_id, ordinal) [pk]
    recipe_id
    ingredient_id
  }
}


Table instructions {
  recipe_id int [not null, ref: > recipes.id]
  ordinal int [not null, note: 'n-th instruction in recipe']
  instruction varchar

  Indexes {
    (recipe_id, ordinal) [pk]
    recipe_id
  }
}

